--- a/common/typeNav.scss
+++ b/common/typeNav.scss
@@ -10,7 +10,7 @@
 			align-items: center;
 			line-height: 35rpx;
 			.typeQueryTitle {
-				font-size: 14px;
+				font-size: 10rpx;
 				color: #434343;
 			}
 		}
