--- a/uni.scss
+++ b/uni.scss
@@ -13,7 +13,9 @@
  */
 
 /* 颜色变量 */
-
+// 自定义颜色
+$uni-color-fygreen: #A3CB64;
+$uni-color-fygray: #ECECEC;
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
