--- a/common/typeTable.scss
+++ b/common/typeTable.scss
@@ -17,8 +17,8 @@
 	.tbTd {
 		display: flex;
 		justify-content: space-between;
-		padding: 0 10rpx;
-		width: calc(100% - 20rpx);
+		padding: 0;
+		width: 100%;
 		height: 30rpx;
 		line-height: 30rpx;
 		background-color: #f7f7f7;
